--- a/V/Vieques/Vieques.html
+++ b/V/Vieques/Vieques.html
@@ -21,8 +21,9 @@
       que se construyeron durante el gobierno español.
     </p>
     <p>
+      Pueden visitar el Faro de Verdiales en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/juNbSqToy8MDs5JJ6">3HWG+FHG, Puerto Ferro, Vieques 00765</a></li>
       </ul>
     </p>
     <h2>Museo El Fortín de Conde Mirasol</h2>
@@ -32,10 +33,10 @@
       Se asienta sobre una hermosa colina que domina el pueblo de Isabel Segunda en Vieques y los cayos cercanos. 
       El fuerte nunca se completó y ahora alberga un museo de arte e historia, así como los archivos históricos de Vieques y una estación de radio.
     </p>
-    Pueden visitar en:
+    Pueden visitar el Museo El Fortín de Conde Mirasol en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/GTA6hRxE9wtwe3my7">4HW6+X92, Cll El Fuerte, Vieques, 00765</a></li>
       </ul>
     </p>
     <h2>Hombre De Puerto Ferro</h2>
@@ -51,33 +52,33 @@ Los restos fueron enterrados en un área rodeada de enormes rocas. Nadie sabe si
 Se retiraron los restos óseos y se excavó el área con la esperanza de encontrar más artefactos. Hoy, todo lo que queda en el sitio son los cantos rodados.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Hombre De Puerto Ferro en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/6eXg6ubkWnLoE9jx8">4G5R+836, Vieques 00765</a></li>
       </ul>
     </p>
     <h2>Playa La Plata</h2>
-    <img src="" width="80%" height="30%">
+    <img src="20181202_132211_Fotor-1024x769.jpg.webp" width="80%" height="30%">
     <p class="text">
       La playa La Plata está localizada en el área este de la isla y pertenece al Refugio Nacional de Vida Silvestre de Vieques. 
       A pesar de su belleza, es poco visitada, para llegar a esta playa es recomendable un vehículo todo terreno. No tiene facilidades de baños,
       merenderos o kioscos, la arena es blanca y el agua azul turquesa, perfecta para snorkeling, pasar un día con la familia o para coger un poco de sol.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Playa La Plata en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/m9c1ejMfTrGSDwF66">4J9F+3HP, Laguna La Plata Rd, Puerto Diablo, Vieques 00765</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Biekes Bistro (787)-556-6855</li>
+    <li>El Quenepo Vieques (787)-741-1215</li>
+    <li>El Yate (787)-741-4191</li>
+    <li>Rincón Del Sabor (939)-358-1783</li>
+    <li>Shaunaa (787)-741-1434</li>
   </ul>
   </div>
   <h2>Eventos</h2>
