--- a/A/Aguada/Aguada.html
+++ b/A/Aguada/Aguada.html
@@ -83,6 +83,6 @@ Aguada, PR, 00602</a></li>
 <li>Fiestas Patronales de San Francisco de Asis - Octubre</li>
   </ul>
     </div>
-<button onclick="A/Adjuntas/Adjuntas.html">Previous</button>
-<button onclick="A/Aguadilla/Aguadilla.html">Next</button>
+<button onclick="Adjuntas/Adjuntas.html">Previous</button>
+<button onclick="Aguadilla/Aguadilla.html">Next</button>
     </body>
