--- a/V/Villalba/Villalba.html
+++ b/V/Villalba/Villalba.html
@@ -12,18 +12,21 @@
   <h2>Lugares turísticos en Villalba</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Los Chorritos</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El área recreativa conocida por todos como Los Chorritos, es un centro de entretenimiento y disfrute para toda la familia.
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Represa Lago Toa Vaca</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Con un área superficial de 1.24 millas cuadradas, el embalse de Toa Vaca es el de mayor capacidad en la isla y es la fuente de agua potable principal en 
+      sectores de Ponce, Villalba, Juana Díaz y parte de Coamo. Se encuentra localizado físicamente en Villalba pero su represa descarga en el Lago Guayabal.
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +34,10 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>La Hoyita</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      La hoyita es un cuerpo de agua hermoso, claro y limpio.
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +45,10 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Cerro La Coroza</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Cerro La Coroza es una montaña y está ubicado en Villalba, Puerto Rico. La elevación sobre el nivel del mar es de 433 metros.
     </p>
     <p>
       Pueden visitar en:
