--- a/V/Villalba/Villalba.html
+++ b/V/Villalba/Villalba.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Los Chorritos</h2>
-    <img src="" width="80%" height="30%">
+    <img src="19292445.jpg" width="80%" height="30%">
     <p class="text">
       El área recreativa conocida por todos como Los Chorritos, es un centro de entretenimiento y disfrute para toda la familia.
     </p>
