--- a/V/Villalba/Villalba.html
+++ b/V/Villalba/Villalba.html
@@ -35,7 +35,7 @@
       </ul>
     </p>
     <h2>La Hoyita</h2>
-    <img src="" width="80%" height="30%">
+    <img src="2022-06-07 (2).png" width="80%" height="30%">
     <p class="text">
       La hoyita es un cuerpo de agua hermoso, claro y limpio.
     </p>
