--- a/V/Villalba/Villalba.html
+++ b/V/Villalba/Villalba.html
@@ -46,7 +46,7 @@
       </ul>
     </p>
     <h2>Cerro La Coroza</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Jack_Delano_-_Corozal,_Puerto_Rico.jpg" width="80%" height="30%">
     <p class="text">
       Cerro La Coroza es una montaña y está ubicado en Villalba, Puerto Rico. La elevación sobre el nivel del mar es de 433 metros.
     </p>
