--- a/V/Villalba/Villalba.html
+++ b/V/Villalba/Villalba.html
@@ -18,20 +18,21 @@
       El área recreativa conocida por todos como Los Chorritos, es un centro de entretenimiento y disfrute para toda la familia.
     </p>
     <p>
+        Pueden visitar Los Chorritos en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/u9SJwf3NdUZzsELN6">4GJ9+8J7, PR-149, Villalba, 00766</a></li>
       </ul>
     </p>
     <h2>Represa Lago Toa Vaca</h2>
-    <img src="" width="80%" height="30%">
+    <img src="lago-toa-vaca-en-villalba.jpg" width="80%" height="30%">
     <p class="text">
       Con un área superficial de 1.24 millas cuadradas, el embalse de Toa Vaca es el de mayor capacidad en la isla y es la fuente de agua potable principal en 
       sectores de Ponce, Villalba, Juana Díaz y parte de Coamo. Se encuentra localizado físicamente en Villalba pero su represa descarga en el Lago Guayabal.
     </p>
-    Pueden visitar en:
+    Pueden visitar la Represa Lago Toa Vaca en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/gGM9Z8Sk9KwhPwi69">Carr 150, Villalba 00766</a></li>
       </ul>
     </p>
     <h2>La Hoyita</h2>
@@ -40,9 +41,9 @@
       La hoyita es un cuerpo de agua hermoso, claro y limpio.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar La Hoyita en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/6VLTdD1sdkHiAy8G6">4CFR+XJ7, PR-517, Villalba, Juana Díaz 00766</a></li>
       </ul>
     </p>
     <h2>Cerro La Coroza</h2>
@@ -51,28 +52,28 @@
       Cerro La Coroza es una montaña y está ubicado en Villalba, Puerto Rico. La elevación sobre el nivel del mar es de 433 metros.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Cerro La Coroza en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/MLJwcbfP1EJ5koHn6">Villalba 00766</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Artesanale (939)-489-8418</li>
+    <li>Punto Tapas Bar & Grill (787)-374-2938</li>
+    <li>Gusto Criollo (787)-340-1656</li>
+    <li>Mesa y Campo Restaurante (787)-519-0437</li>
+    <li>Buen Diente Café (787)-410-5986</li>
   </ul>
   </div>
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Festival Areyto - noviembre</li>
+    <li>Fiestas Patronales de Nuestra Sra. del carmen - julio</li>
+    <li>Maratón Carlos Báez - Diciembre</li>
   </ul>
   </div>
 </body>
