--- a/Y/Yabucoa/Yabucoa.html
+++ b/Y/Yabucoa/Yabucoa.html
@@ -12,18 +12,23 @@
   <h2>Lugares turísticos en Yabucoa</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Antigua Central Azucarera Antonio Roig Torrellas</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El origen de Central Roig se remonta a la década de 1870 cuando era un ingenio conocido como Carmen, bautizado así en honor a María del Carmen Rodríguez 
+      esposa de su propietario Ramón Aponte Ortiz de la Renta. Su nombre fue cambiado a Hacienda Mercedita en 1878 cuando fue adquirido por el inmigrante español 
+      Cristóbal Vallecillo Morales en honor a su única hija María de las Mercedes Vallecillo Mandry (1883-1933). 
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Piedra Las Guaretas (Cueva de las Cabras)</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+       Esta enorme piedra partida a la mitad es un gran enigma. ¿Cómo se partió? Los vecinos cercanos aseguran que otro piedra en un 
+      deslizamiento al caer encima la quebró.
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +36,12 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Piedra Blanca</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      En el Barrio Jacanas de Yabucoa se encuentra esta enorme granito de 70 pies de altura conocida como Piedra Blanca debido a su color. 
+      En Puerto Rico existen este tipo de piedras y la mayoría de ellas se pueden encontrar cerca de las costas de Yabucoa.
+      Este peñón en particular es uno de los favoritos para los amantes de la escalada deportiva en Puerto Rico.
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +49,10 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Escaleras Coquí</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Este mural es una atracción reciente ene l pueblo de Yabucoa. Presenta un paisaje con el coquí, uno de los animales más reconocidos de la isla.
     </p>
     <p>
       Pueden visitar en:
