--- a/Y/Yabucoa/Yabucoa.html
+++ b/Y/Yabucoa/Yabucoa.html
@@ -37,7 +37,7 @@
       </ul>
     </p>
     <h2>Piedra Blanca</h2>
-    <img src="" width="80%" height="30%">
+    <img src="118131796_smallMed_1575834465.jpg" width="80%" height="30%">
     <p class="text">
       En el Barrio Jacanas de Yabucoa se encuentra esta enorme granito de 70 pies de altura conocida como Piedra Blanca debido a su color. 
       En Puerto Rico existen este tipo de piedras y la mayoría de ellas se pueden encontrar cerca de las costas de Yabucoa.
