--- a/Y/Yabucoa/Yabucoa.html
+++ b/Y/Yabucoa/Yabucoa.html
@@ -50,7 +50,7 @@
       </ul>
     </p>
     <h2>Escaleras Coquí</h2>
-    <img src="" width="80%" height="30%">
+    <img src="158651518_3708973175805730_8371788978041289310_n.jpg" width="80%" height="30%">
     <p class="text">
       Este mural es una atracción reciente ene l pueblo de Yabucoa. Presenta un paisaje con el coquí, uno de los animales más reconocidos de la isla.
     </p>
