--- a/Y/Yabucoa/Yabucoa.html
+++ b/Y/Yabucoa/Yabucoa.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Antigua Central Azucarera Antonio Roig Torrellas</h2>
-    <img src="" width="80%" height="30%">
+    <img src="download (1).jpg" width="80%" height="30%">
     <p class="text">
       El origen de Central Roig se remonta a la década de 1870 cuando era un ingenio conocido como Carmen, bautizado así en honor a María del Carmen Rodríguez 
       esposa de su propietario Ramón Aponte Ortiz de la Renta. Su nombre fue cambiado a Hacienda Mercedita en 1878 cuando fue adquirido por el inmigrante español 
