--- a/Y/Yabucoa/Yabucoa.html
+++ b/Y/Yabucoa/Yabucoa.html
@@ -25,7 +25,7 @@
       </ul>
     </p>
     <h2>Piedra Las Guaretas (Cueva de las Cabras)</h2>
-    <img src="" width="80%" height="30%">
+    <img src="yabucoa-rocks-beach-1b.jpg" width="80%" height="30%">
     <p class="text">
        Esta enorme piedra partida a la mitad es un gran enigma. ¿Cómo se partió? Los vecinos cercanos aseguran que otro piedra en un 
       deslizamiento al caer encima la quebró.
