--- a/Y/Yabucoa/Yabucoa.html
+++ b/Y/Yabucoa/Yabucoa.html
@@ -20,8 +20,9 @@
       Cristóbal Vallecillo Morales en honor a su única hija María de las Mercedes Vallecillo Mandry (1883-1933). 
     </p>
     <p>
+       Pueden visitar la Antigua Central Azucarera Antonio Roig Torrellas en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/Mfw5rp8fb6iQs4BQ8">346G+FF3, Cll La Central, Yabucoa, 00767</a></li>
       </ul>
     </p>
     <h2>Piedra Las Guaretas (Cueva de las Cabras)</h2>
@@ -30,10 +31,10 @@
        Esta enorme piedra partida a la mitad es un gran enigma. ¿Cómo se partió? Los vecinos cercanos aseguran que otro piedra en un 
       deslizamiento al caer encima la quebró.
     </p>
-    Pueden visitar en:
+    Pueden visitar la Piedra Las Guaretas (Cueva de las Cabras) en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/aTLyGHFmo63j21u28">1 PR-901, Yabucoa, 00767</a></li>
       </ul>
     </p>
     <h2>Piedra Blanca</h2>
@@ -44,9 +45,9 @@
       Este peñón en particular es uno de los favoritos para los amantes de la escalada deportiva en Puerto Rico.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Piedra Blanca en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/fiGgKZw9iLix6uuv6">33WR+MX2, Yabucoa 00767</a></li>
       </ul>
     </p>
     <h2>Escaleras Coquí</h2>
@@ -55,28 +56,32 @@
       Este mural es una atracción reciente ene l pueblo de Yabucoa. Presenta un paisaje con el coquí, uno de los animales más reconocidos de la isla.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar las Escaleras Coquí en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/vMvbkuEFvQYGjq5a6">24XC+X4M, Yabucoa, 00767</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Platanutre Bar & Grill (939)-308-4489</li>
+    <li>Sammy's Pizza #1 (787)-900-3981</li>
+    <li>Dulce&Sala'o. By Chef Yey (787)-400-7894</li>
+    <li>Sammy's Family Pizza (787)-266-1588</li>
+    <li>Pizzería El Pariente (787)-893-4435</li>
   </ul>
   </div>
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Fiesta del Azúcar, Guarapo y Melao - Mayo</li>
+    <li>Festival del Campesino - Octubre</li>
+    <li>Festival del Carmen en la Playa Guayanes - Julio</li>
+    <li>Festival de Quebradillas - Septiembre</li>
+    <li>Fiestas Jíbaro de Martorell - Diciembre</li>
+    <li>Festival Playero - Mayo</li>
+    <li>Fiestas Patronales de los Santos Ángeles Custodios - Octubre</li>
   </ul>
   </div>
 </body>
