--- a/Y/Yauco/Yauco.html
+++ b/Y/Yauco/Yauco.html
@@ -12,18 +12,23 @@
   <h2>Lugares turísticos en Yauco</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>La Escalinata</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Esta escalera (escalinatas) está en el pueblo de Yauco, en la parte sur de Puerto Rico. Representa el escudo o escudo de armas de la localidad.
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Yaucromatic</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Celebrando la cultura y las artes se concibe el proyecto de arte urbano y pintura muralista en la Ciudad del Café, Yaucromatic. 
+      Como protagonistas se ha contado con casi una veintena de muralistas del patio e internacionales y a través de diversas alianzas y
+      el auspicio del sector público y privado es que se ha logrado organizar un evento sin par de hermosa manifestación artística en el pueblo de
+      Yauco y para el disfrute de todos.
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +36,11 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Cerro El Rodadero</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Cerro el Rodadero se encuentra en lo alto de las montañas de Yauco, un pueblo en la parte suroeste de la isla. Este pico es un afloramiento rocoso, 
+      en lo alto (alrededor de 850 pies) en las montañas verdes. Desde esa altura se puede ver toda la costa y muchos pueblos de los alrededores.
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +48,13 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Charco Piazza</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Esta pequeña cascada, río y piscina natural están justo cuando empiezas la ruta del Cerro el Rodadero. Puedes bajar al río a través de un camino en
+      el lado izquierdo del puente,
+      o por un pequeño camino a la derecha (¡realmente depende de cuándo quieras mojarte!).
+      Llegar a la piscina natural requiere meterse en el agua. Es un buen lugar para pasar un rato y refrescarse.
     </p>
     <p>
       Pueden visitar en:
