--- a/Y/Yauco/Yauco.html
+++ b/Y/Yauco/Yauco.html
@@ -23,7 +23,7 @@
       </ul>
     </p>
     <h2>Yaucromatic</h2>
-    <img src="" width="80%" height="30%">
+    <img src="AK35RUMPIJHTTAUPZJJHDYP3TQ.jpg" width="80%" height="30%">
     <p class="text">
       Celebrando la cultura y las artes se concibe el proyecto de arte urbano y pintura muralista en la Ciudad del Café, Yaucromatic. 
       Como protagonistas se ha contado con casi una veintena de muralistas del patio e internacionales y a través de diversas alianzas y
