--- a/Y/Yauco/Yauco.html
+++ b/Y/Yauco/Yauco.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>La Escalinata</h2>
-    <img src="" width="80%" height="30%">
+    <img src="RBLO6BYUTVFFXDJ737XZQJMF74.jpg" width="80%" height="30%">
     <p class="text">
       Esta escalera (escalinatas) está en el pueblo de Yauco, en la parte sur de Puerto Rico. Representa el escudo o escudo de armas de la localidad.
     </p>
