--- a/Y/Yauco/Yauco.html
+++ b/Y/Yauco/Yauco.html
@@ -37,7 +37,7 @@
       </ul>
     </p>
     <h2>Cerro El Rodadero</h2>
-    <img src="" width="80%" height="30%">
+    <img src="cerro-rodadero-1f.jpg" width="80%" height="30%">
     <p class="text">
       Cerro el Rodadero se encuentra en lo alto de las montañas de Yauco, un pueblo en la parte suroeste de la isla. Este pico es un afloramiento rocoso, 
       en lo alto (alrededor de 850 pies) en las montañas verdes. Desde esa altura se puede ver toda la costa y muchos pueblos de los alrededores.
