--- a/Y/Yauco/Yauco.html
+++ b/Y/Yauco/Yauco.html
@@ -18,8 +18,9 @@
       Esta escalera (escalinatas) está en el pueblo de Yauco, en la parte sur de Puerto Rico. Representa el escudo o escudo de armas de la localidad.
     </p>
     <p>
+      Pueden visitar La Escalinata en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/9QCUVXozigTWacM56">14-16 Calle Betances, Yauco, 00698</a></li>
       </ul>
     </p>
     <h2>Yaucromatic</h2>
@@ -30,10 +31,11 @@
       el auspicio del sector público y privado es que se ha logrado organizar un evento sin par de hermosa manifestación artística en el pueblo de
       Yauco y para el disfrute de todos.
     </p>
-    Pueden visitar en:
+    Pueden visitar Yaucromatic en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://g.page/yaucromatic?share">29-37 Calle E Sanchez Lopez, Yauco, 00698</a></li>
+        <li>Website: <a href="http://www.yaucromatic.com/">yaucromatic.com</a></li>
       </ul>
     </p>
     <h2>Cerro El Rodadero</h2>
@@ -43,13 +45,13 @@
       en lo alto (alrededor de 850 pies) en las montañas verdes. Desde esa altura se puede ver toda la costa y muchos pueblos de los alrededores.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Cerro El Rodadero en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/9TpjCEWH2jo87Ci2A">453J+H6R, Unnamed Rd, Puerto Rico, Yauco, 00698</a></li>
       </ul>
     </p>
     <h2>Charco Piazza</h2>
-    <img src="" width="80%" height="30%">
+    <img src="D8PdW_BUYAAnKpx.jpg_large" width="80%" height="30%">
     <p class="text">
       Esta pequeña cascada, río y piscina natural están justo cuando empiezas la ruta del Cerro el Rodadero. Puedes bajar al río a través de un camino en
       el lado izquierdo del puente,
@@ -57,17 +59,17 @@
       Llegar a la piscina natural requiere meterse en el agua. Es un buen lugar para pasar un rato y refrescarse.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Charco Piazza en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/ovhNKNXzXrTLxJc79">35V8+W3W, Río, Diego Hernández, Yauco, Puerto Rico</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
+    <li>Restaurante Q'lantro (939)-992-9663 </li>
+    <li>El Paladar Bar & Grill (787)-267-4491 </li>
     <li></li>
     <li></li>
     <li></li>
@@ -76,9 +78,9 @@
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Festival Nacional del Café - febrero</li>
+    <li>Fiestas Patronales de Nuestra Virgen del Rosario - Octubre</li>
+    <li>Festival de la Raza Puertorriqueña - Noviembre</li>
   </ul>
   </div>
 </body>
