--- a/Y/Yauco/Yauco.html
+++ b/Y/Yauco/Yauco.html
@@ -70,9 +70,9 @@
   <ul>
     <li>Restaurante Q'lantro (939)-992-9663 </li>
     <li>El Paladar Bar & Grill (787)-267-4491 </li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Dolche Salao (787)-533-7080 </li>
+    <li>La Casona de Coayú (787)-202-3573</li>
+    <li>Mamina's (787)-601-1100</li>
   </ul>
   </div>
   <h2>Eventos</h2>
