--- a/A/AguasBuenas/AguasBuenas.html
+++ b/A/AguasBuenas/AguasBuenas.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Pobreza en Puerto Rico</title>
+  <title>Turismo en Aguas Buenas</title>
   <link href="AguasBuenas.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
