--- a/B/Barranquitas/Barranquitas.html
+++ b/B/Barranquitas/Barranquitas.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Pobreza en Puerto Rico</title>
+  <title>Turismo en Barranquitas</title>
   <link href="Barranquitas.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
