--- a/C/Catano/Catano.html
+++ b/C/Catano/Catano.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Pobreza en Puerto Rico</title>
+  <title>Turismo en Cataño</title>
   <link href="Catano.css" rel="stylesheet" type="text/css" />
 <body>
 <div class="Titulo">
