--- a/C/Ciales/Ciales.html
+++ b/C/Ciales/Ciales.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Pobreza en Puerto Rico</title>
+  <title>Turismo en Ciales</title>
   <link href="Ciales.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
