--- a/J/Juncos/Juncos.html
+++ b/J/Juncos/Juncos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Pobreza en Puerto Rico</title>
+  <title>Turismo en Juncos</title>
   <link href="Juncos.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
