--- a/L/Lajas/Lajas.html
+++ b/L/Lajas/Lajas.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Turismo en Puerto Rico</title>
+  <title>Turismo en Lajas</title>
   <link href="Lajas.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
