--- a/L/Lares/Lares.html
+++ b/L/Lares/Lares.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Turismo en Puerto Rico</title>
+  <title>Turismo en Lares</title>
   <link href="Lares.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
