--- a/L/Loiza/Loiza.html
+++ b/L/Loiza/Loiza.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Turismo en Puerto Rico</title>
+  <title>Turismo en Loiza</title>
   <link href="Loiza.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
