--- a/M/Manati/Manati.html
+++ b/M/Manati/Manati.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Pobreza en Puerto Rico</title>
-  <link href="Manatí.css" rel="stylesheet" type="text/css" />
+  <title>Turismo en Manatí</title>
+  <link href="Manati.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
