--- a/R/RioGrande/RioGrande.html
+++ b/R/RioGrande/RioGrande.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Pobreza en Puerto Rico</title>
+  <title>Turismo en Río Grande</title>
   <link href="RioGrande.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
-  <h2>Lugares turísticos en Rio Grande</h2>
+  <h2>Lugares turísticos en Río Grande</h2>
 </div>
   <div class="Lugares">
     <h2>La Paseadora Río Espíritu Santo</h2>
