--- a/S/SanGerman/SanGerman.html
+++ b/S/SanGerman/SanGerman.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Pobreza en Puerto Rico</title>
+  <title>Turismo en San Germán</title>
   <link href="SanGerman.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
