--- a/T/TrujilloAlto/TrujilloAlto.html
+++ b/T/TrujilloAlto/TrujilloAlto.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Pobreza en Puerto Rico</title>
+  <title>Turismo en Trujillo Alto</title>
   <link href="TrujilloAlto.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
