--- a/V/VegaBaja/VegaBaja.html
+++ b/V/VegaBaja/VegaBaja.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Pobreza en Puerto Rico</title>
+  <title>Turismo en Vega Baja</title>
   <link href="VegaBaja.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
