--- a/M/Manati/Manati.html
+++ b/M/Manati/Manati.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Hacienda La Esperanza Para la Naturaleza</h2>
-    <img src="HLE_2020_09_16_Informe-de-NFWF-Anexis-Morales--0587_198ECFC8-5056-A36A-083E69C88F8916C9-09.jpg" width="80%" height="30%">
+    <img src="casamanati.jpg" width="80%" height="30%">
     <p class="text">
       Atrévete a conocer el área natural protegida de mayor extensión en la costa noroeste de Puerto Rico: ¡la Reserva Natural Hacienda La Esperanza en Manatí!Desde allí apreciarás los picos de la Cordillera Central, mogotes, amplios pastizales, varios tipos de humedales, playas y la desembocadura del Río Grande de Manatí.
     </p>
