--- a/A/Adjuntas/Adjuntas.html
+++ b/A/Adjuntas/Adjuntas.html
@@ -93,5 +93,7 @@ Cultivan y Producen uno de los mejores Cafés Especiales en el mundo.
 <li>Fiestas Patronales de San Joaquin & Santa Ana - Agosto </li>
 </ul>
   </div>
-<a href="
+<div class="Links">
+<a href= "A/Aguada/Aguada.html"> Página siguiente </a>
+</div>
 </body>
