--- a/A/Adjuntas/Adjuntas.html
+++ b/A/Adjuntas/Adjuntas.html
@@ -94,6 +94,6 @@ Cultivan y Producen uno de los mejores Cafés Especiales en el mundo.
 </ul>
   </div>
 <div class="Links">
-<a href= "Aguada.html"> Página siguiente </a>
+<a href= "index.html/A/Adjuntas/Adjuntas.html"> Página siguiente </a>
 </div>
 </body>
